version 0.99.0 - XX-MMM-2010
 . Sprite: use correct blending functions (issue #728)
 . Box2d: updated to r54 (issue #494)
 
version 0.99.0-rc - 31-Jan-2010
 . All: Default OpenGL state is: GL_TEXTURE_2D, GL_VERTEX_ARRAY, GL_COLOR_ARRAY, GL_TEXTURE_COORD_ARRAY (issue #718)
 . Action: Improved CCSequence performance (issue #XXX)
 . BitmapFontAtlas: huge performance boost in update/create time (issue #730)
 . Box2d: updated to r39 (issue #494)
 . Camera: Offset fixed in landscape mode (issue #378)
 . Camera: It's possible to orbit around any point (issue #438)
 . Camera: Doesn't reset affine matrix (issue #XXX)
 . Chipmunk: Using Chipmunk v5.1.0 (issue #664)
 . Configuration: added object that knows GL capabilities and other misc stuff (issue #712)
 . Director/Particles/Grid: removed hardcoded display size values. Using variable (issue #XXX)
 . Director: send "cleanup" message to root scene when it is being replaced (issue #709)
 . Effects: works independently of the display resolution (issue #XXX)
 . Grid: optimized code. Only call camera.locate if it is dirty (issue #XXX)
 . Node: Uses cached Affine matrix to transform the nodes (2 GL calls vs. 5 GL calls) (issue #XXX)
 . Node: uses bits instead of bools when compiled with SDK >= 3_0 (issue #726)
 . Node: uses "_" suffix for ivars (children_, isRunning_, tag_, etc..) (issue #733)
 . Scheduler: removed support of repeats. Postponed for v0.99.1 (rolling back issue #630)
 . Singletons: removed @syncronized() since cocos2d is not thread safe (issue #663)
 . SpriteSheet: reorder updates descendants. Added test for this case (issue #708)
 . Sprite: can create sprite from SpriteSheet. deprecated creation method from SpriteSheet (issue #657)
 . Sprite: optimized rendering when using spriteSheet and subchildren (issue #XXX)
 . Sprite: flip only flips the texture (not the anchor point and children) (issue #725)
 . Templates: Updated to support v0.99, Chipmunk v5.1 and Box2D r39